Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rawOverride/7062745/T7062745neg.out
T7062745neg.java:16:36: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Object, java.lang.Number)
1 error
